--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ Text Domain: mwc
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
+
+p.testtt {
+    background-color: black;
+    color: blue;
+}
